fix(plyr-controls): fix el style of plyr-controls settings on mobile

--- a/src/style/plyr-controls.css
+++ b/src/style/plyr-controls.css
@@ -19,3 +19,11 @@
   border: var(--interactive-accent) solid;
 }
 
+.plyr-controls-settings button {
+  width: inherit;
+  margin-right: 12px;
+}
+
+.plyr-controls-settings .plyr__time--duration {
+  display: inline-block !important;
+}
